--- a/html/forgetPassword_frame.html
+++ b/html/forgetPassword_frame.html
@@ -36,7 +36,7 @@
       </div>
     <div class="row mob">
         <input id="mobile" class="input" type="number" placeholder="手机号" style="border-bottom: 1px solid #fe467a !important">
-        <div class="aui-btn" onclick="fnsend_code()">获取验证码</div>
+        <div class="aui-btn">获取验证码</div>
     </div>
     <div class="row">
         <input id="code" class="input" type="password" placeholder="验证码" style="border-bottom: 1px solid #fe467a !important">
@@ -44,31 +44,21 @@
     <div class="row">
         <input id="password" class="input" type="password" placeholder="密码" style="border-bottom: 1px solid #fe467a !important">
     </div>
-    <div class="btn" tapmode="highlight" onclick="fnRegister();">注册</div>
+    <div class="btn" tapmode="highlight" onclick="fnreastPassword();">重置密码</div>
 
 
 </body>
 <script type="text/javascript" src="../script/api.js"></script>
 <script type="text/javascript">
-var hname;
 apiready = function() {
     fnInitUIInput();
-    init();
 };
-//初始化
-  function init() {
-    api.readFile({
-        sync:false,
-        path: 'widget://res/common.json'
-    }, function(ret){
-        hname = ret;
-    });
-  }
+
 var UIInput;
-var usernameUIInputId;
+var mobileUIInputId;
 var passwordUIInputId;
 var codeUIInputId;
-var usernameValue;
+var mobileValue;
 var passwordValue;
 var codeValue
 
@@ -80,7 +70,7 @@ function fnInitUIInput() {
     UIInput = api.require('UIInput');
     UIInput.open({
         rect: {
-            x: usernameRect.l ,
+            x:usernameRect.l ,
             y: usernameRect.t,
             w: usernameRect.w-120,
             h: usernameRect.h
@@ -100,20 +90,20 @@ function fnInitUIInput() {
         fixedOn: api.frameName
     }, function(ret, err) {
         if (ret) {
-             usernameUIInputId = ret.id;
+            mobileUIInputId = ret.id;
             if (ret && ret.eventType == "show") {
                 setTimeout(function() {
                     UIInput.popupKeyboard({
-                        id:  usernameUIInputId
+                        id: mobileUIInputId
                     });
                 }, 200);
             } else if (ret.eventType == "change") {
                 UIInput.value({
-                    id:  usernameUIInputId
+                    id: mobileUIInputId
                 }, function(ret, err) {
                     if (ret) {
                         if (ret.status) {
-                             usernameValue = ret.msg;
+                            mobileValue = ret.msg;
                         }
                     }
                 });
@@ -201,18 +191,22 @@ function fnInitUIInput() {
         }
     });
 }
-// 注册
-function fnRegister() {
+
+// 重置密码
+function fnreastPassword() {
+    usernameValue = $api.val($api.byId('mobile'))
+    passwordValue = $api.val($api.byId('password'))
+
     if (!usernameValue) {
         if (api.systemType == 'android') {
             setTimeout(function() {
                 UIInput.popupKeyboard({
-                    id: usernameUIInputId
+                    id: mobileUIInputId
                 });
             }, 200);
         } else {
             UIInput.popupKeyboard({
-                id: usernameUIInputId
+                id: mobileUIInputId
             });
         }
         return;
@@ -233,11 +227,11 @@ function fnRegister() {
     }
 
     api.ajax({
-        url: 'https://d.apicloud.com/mcm/api/user',
+        url: 'http://d.apicloud.com/mcm/api/user/login',
         method: 'post',
         headers: {
-            "X-APICloud-AppId": "A6079750662654",
-            "X-APICloud-AppKey": "4B3AB3D8-C633-6D3E-F6C3-37EDFE6978AB"
+            "X-APICloud-AppId": "A6921544633372",
+            "X-APICloud-AppKey": "2672b5911d8551540c1ea598e01c87fee217a1e5.1482500122476"
         },
         data: {
             values: {
@@ -246,60 +240,36 @@ function fnRegister() {
             }
         }
     }, function(ret, err) {
-        if (ret && ret.id) {
+        if (ret) {
+            // 保存用户信息
+            $api.setStorage('userInfo', ret);
+
             api.alert({
                 title: '提示',
-                msg: '注册成功',
+                msg: '登录成功',
             }, function(ret, err) {
                 if (ret) {
-                    // 跨窗口执行Script, 将用户名传给登录页面
-                    api.execScript({
-                        name: 'login',
-                        frameName: 'login_frame',
-                        script: 'fnSetUsername(\"' + usernameValue + '\");'
-                    });
                     api.closeWin();
                 }
             });
         } else {
             api.toast({
-                msg: '注册失败，用户名已被占用',
+                msg: '登录失败，用户名或密码错误',
                 duration: 2000,
                 location: 'middle'
             });
         }
     });
 }
-// 验证码
-   function fnsend_code() {
-    //  var inputValue = $api.byId('mobile');
-    UIInput.value({
-        id:  usernameUIInputId
-    });
-    var str = JSON.stringify(hname);
-    str = eval("("+str+")");
-    // data  status
-    str = str['data'];
-    //data
-    str = eval("("+str+")");
-    //js
-    console.log(str['hname']['sb']);
-    return;
-     api.ajax({
-         url: hname.hname.name+'/public/index/Create/send_sms',
-         method: 'post',
-         data: {
-              "phone":usernameValue
-         }
-     },function(ret, err){
-         if (ret) {
-             alert( JSON.stringify( ret ) );
-         } else {
-             alert( JSON.stringify( err ) );
-         }
-     });
 
-   }
+// 被注册页面调用，用于从注册页面传递用户名
+function fnSetUsername(username_) {
+    usernameValue = username_;
+    UIInput.value({
+        id: usernameUIInputId,
+        msg: username_
+    }, function(ret, err) {});
+}
 </script>
 
 </html>
