--- a/html/goosDetail_win.html
+++ b/html/goosDetail_win.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" type="text/css" href="../css/aui.css" />
     <style type="text/css">
                     .aui-bar-nav {
-                    /*line-height: 43px;*/
+                    line-height: 43px;
                     background: #fff;
+                    padding-top: 20px
                      }
                      .gambit_recommend .list{
-                       /*height: 42px !important;*/
+                       height: 42px !important;
                      }
                     .gambit_head {
                         width: 100%;
-                        /*height: 43px;*/
+                        height: 43px;
                         display: flex;
                         display: -webkit-flex;
                         display: -webkit-box;
