--- a/html/login_frame.html
+++ b/html/login_frame.html
@@ -88,7 +88,7 @@ function fnInitUIInput() {
         autoFocus: false,
         maxRows: 1,
         placeholder: '用户名',
-        keyboardType: 'default',
+        keyboardType: 'number',
         fixedOn: api.frameName
     }, function(ret, err) {
         if (ret) {
